# Dice

./: CMakeLists.txt  README.md
src/: dice.cpp  dice.hpp  main.cpp  slider.cpp  slider.hpp  windowTest.cpp
